# maria-microintern

./: .gitignore  Makefile  README.md  migrate-to-policyengine.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
public/: index.html  manifest.json
public/images/: .gitkeep
src/: App.test.tsx  App.tsx  index.css
src/components/: Navigation.tsx  SlideContainer.tsx
src/sections/: BackgroundSection.tsx  IntroSlide.tsx  LondonSection.tsx  ReflectionSection.tsx  WorkSection.tsx
src/sections/projects/: CongressionalDistrictsPage.tsx  CrossRepoPage.tsx  DataSchemaPage.tsx  MicrocalibratePage.tsx  MicroimputePage.tsx  ParameterUpdatesPage.tsx
src/types/: react-use-keypress.d.ts
