[project]
name = "policyengine-presentation"
version = "0.1.0"
description = "Interactive presentation for PolicyEngine internship"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]